@@ -3,10 +3,11 @@ OpenLDAP 2.3 Change Log
 OpenLDAP 2.3.26 Engineering
 	Fixed libldap dnssrv bug with "not present" positive statement (ITS#4610)
 	Fixed slapd incorrect rebuilding of replica URI (ITS#4633)
+	Fixed slapd-monitor operations order via callbacks (ITS#4631)
 	Fixed slapo-accesslog purge task during shutdown
 	Fixed slapo-ppolicy handling of default policy (ITS#4634)
 	Fixed slapo-ppolicy logging verbosity when using default policy
-	Fixed back-monitor operations order via callbacks (ITS#4631)
+	Fixed slapo-syncprov incomplete sync on restart issues (ITS#4622)
 
 OpenLDAP 2.3.25 Release
 	Fixed liblber ber_bvreplace_x argument checks
